# n8n-workflow-image-generator

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RICH_FEATURES.md  fix_workflows.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
examples/: invalid-workflow.json  multi-node-workflow.json  output.json  simple-workflow.json
examples/real-workflow/: real-workflow.json
n8n_snap/: __init__.py  cli.py
src/: __init__.py  cli.py  renderer.py  scanner.py  server.py  worker.py
templates/: workflow-renderer.html
