[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n8n-snap"
version = "1.0.0"
description = "CLI tool to generate high-quality PNG snapshots from n8n workflow JSON files using Playwright"
readme = "README.md"
license = "MIT"
authors = [
    { name = "n8n Team", email = "support@n8n.io" }
]
requires-python = ">=3.9"
keywords = ["n8n", "workflow", "automation", "snapshot", "png", "playwright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "playwright==1.48.0",
    "flask==3.0.0",
    "click==8.1.7",
    "rich==13.7.0",
    "pydantic==2.5.0",
    "psutil==5.9.6",
]

[project.urls]
Homepage = "https://github.com/n8n-io/n8n-snap"
Repository = "https://github.com/n8n-io/n8n-snap"

[project.scripts]
n8n-snap = "src.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
